Fix the photo carousels - right margin disappearing on smaller devices

--- a/quinnrose/static/quinnrose/css/base.css
+++ b/quinnrose/static/quinnrose/css/base.css
@@ -869,3 +869,20 @@ Modal Dialogs
      border-top-left-radius: 5px;
      border-top-right-radius: 5px;
 }
+
+
+/* Media template */
+/*
+@media (min-width:1201px) { 
+}
+@media (max-width:1200px) and (min-width: 993px) { 
+}
+@media (max-width:992px) and (min-width: 769px) { 
+}
+@media (max-width:768px) and (min-width: 481px) { 
+}
+@media (max-width:480px) and (min-width: 321px) { 
+}
+@media (max-width:320px) { 
+}
+*/
