--- a/quinnrose/static/quinnrose/css/jssor_carousel.css
+++ b/quinnrose/static/quinnrose/css/jssor_carousel.css
@@ -1,33 +1,71 @@
-
 .jssor_main_init {
-	position: relative; margin: 0 auto; top: 0px; left: 0px; width: 800px; height: 456px; overflow: hidden; visibility: hidden; background-color: #24262e;
+	position: relative;
+	margin: 0 auto;
+	top: 0px;
+	left: 0px;
+	width: 800px;
+	height: 456px;
+	overflow: hidden;
+	visibility: hidden;
+	background-color: #24262e;
 }
 .jssor_loading_init {
-	position: absolute; top: 0px; left: 0px;
+	position: absolute;
+	top: 0px;
+	left: 0px;
 }
 .jssor_loading_div1_init {
-	filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;
+	filter: alpha(opacity=70);
+	opacity: 0.7;
+	position: absolute;
+	display: block;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
 }
 .jssor_loading_div2_init {
-	position:absolute;display:block;background:url('images/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;
+	position:absolute;
+	display:block;
+	background:url('/static/images/loading.gif') no-repeat center center;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:100%;
 }
 .jssor_slides_div {
-	cursor: default; position: relative; top: 0px; left: 0px; width: 800px; height: 356px; overflow: hidden;
+	cursor: default;
+	position: relative;
+	top: 0px;
+	left: 0px;
+	width: 800px;
+	height: 356px;
+	overflow: hidden;
 }
 .jssor_144_50_div {
 	display: none;
 }
 .jssor_thumbnavigator {
-	position:absolute;left:0px;bottom:0px;width:800px;height:100px;
+	position:absolute;
+	left:0px;
+	bottom:0px;
+	width:800px;
+	height:100px;
 }
 .jssor_thumbnavigator_slides {
 	cursor: default;
 }
 .jssor_arrow_left {
-	top:158px;left:8px;width:40px;height:40px;
+	top:158px;
+	left:8px;
+	width:40px;
+	height:40px;
 }
 .jssor_arrow_right {
-	top:158px;right:8px;width:40px;height:40px;
+	top:158px;
+	right:8px;
+	width:40px;
+	height:40px;
 }
 /* jssor slider arrow navigator skin 05 css */
 /*
@@ -130,4 +168,55 @@
     /* ie quirks mode adjust */
     width /**/: 72px;
     height /**/: 72px;
+}
+
+@media (min-width:1201px) { 
+	.jssor_carousel_col {
+		width: 100%;
+	}
+}
+@media (max-width:1200px) and (min-width: 1097px) { 
+	.jssor_carousel_col {
+		width: 100%;
+	}
+}
+@media (max-width:1096px) and (min-width: 993px) { 
+	.jssor_carousel_col {
+		width: 98.5%;
+	}
+}
+@media (max-width:992px) and (min-width: 891px) { 
+	.jssor_carousel_col {
+		width: 97%;
+	}
+}
+@media (max-width:890px) and (min-width: 769px) { 
+	.jssor_carousel_col {
+		width: 96%;
+	}
+}
+@media (max-width:768px) and (min-width: 625px) { 
+	.jssor_carousel_col {
+		width: 95%;
+	}
+}
+@media (max-width:624px) and (min-width: 481px) { 
+	.jssor_carousel_col {
+		width: 94%;
+	}
+}
+@media (max-width:480px) and (min-width: 401px) { 
+	.jssor_carousel_col {
+		width: 93%;
+	}
+}
+@media (max-width:400px) and (min-width: 321px) { 
+	.jssor_carousel_col {
+		width: 92%;
+	}
+}
+@media (max-width:320px) { 
+	.jssor_carousel_col {
+		width: 90%;
+	}
 }
